# mahjong-scorer-discortbot

./: .clinerules  .gitignore  README.md  pyproject.toml  review.md
.github/workflows/: ci.yml
app/: main.py
app/core/: data_manager.py  gameset_manager.py  models.py
app/discord_bot/: commands.py
tests/: test_data_manager.py  test_gameset_manager.py  test_main.py
