[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Kosuke Uchida",email = "byebyeearthjpn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py (>=2.5.2,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
mypy = "^1.16.1"
ruff = "^0.12.1"
isort = "^6.0.1"
black = "^25.1.0"
pytest-asyncio = "^1.0.0"

